change readme , change base.html

--- a/naveenproject/naveenproject/templates/base.html
+++ b/naveenproject/naveenproject/templates/base.html
@@ -53,11 +53,15 @@
 
     <div class="container">
 
-      <h1>{% block page_title %}Example Base Template{% endblock page_title %}</h1>
+      <h1>MTV mean Models, Templates and Views .
+- Models is the representation of the requierd data in encapsultaed format
+It is generally divided into various tables of related or non-related data .
+- Views is used to select and display the Models as per the need .
+Using views, the Models table is accesed and the data are fetched .
+- The Templates is the place where we actually present the data to the user like
+in some html pages . The data is fitted into the context of the templates by the views .</h1>
 
-      {% block content %}
-        <p>Use this document as a way to quick start any new project.</p>
-      {% endblock content %}
+
 
     </div> <!-- /container -->
 
