--- a/naveenproject/naveenproject/templates/base.html
+++ b/naveenproject/naveenproject/templates/base.html
@@ -55,9 +55,9 @@
 
       <h1>MTV mean Models, Templates and Views .
 - Models is the representation of the requierd data in encapsultaed format
-It is generally divided into various tables of related or non-related data .
+It is generally divided into various tables of related or non-related data .</br>
 - Views is used to select and display the Models as per the need .
-Using views, the Models table is accesed and the data are fetched .
+Using views, the Models table is accesed and the data are fetched .</br>
 - The Templates is the place where we actually present the data to the user like
 in some html pages . The data is fitted into the context of the templates by the views .</h1>
 
